--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,22 +7,22 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-
-    /* Bundler mode for Vite */
+    
+    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
+    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
-    /* Asset imports */
+    
+    /* CSS and asset imports */
     "resolveJsonModule": true,
     "allowArbitraryExtensions": true
   },
